Micronaut {version} includes the following changes:

=== Core Features

==== Improved Support for Records

Java 14+ Records can now be used to define <<configurationProperties, Configuration Properties>>. By default when `@ConfigurationProperties` is used on a `record`, configuration injection is applied. For example:

[source,java]
----
package example;
import io.micronaut.context.annotation.*;
import javax.validation.constraints.*;

@ConfigurationProperties("example")
record Example(@Min(20) int num, String name) {
}
----

==== Locale Resolution

A new interface api:http.server.util.HttpLocaleResolver[] has been introduced to support resolving a locale from a given request in multiple ways. A `java.util.Locale` object can now be a parameter to controller and client methods to automatically bind the locale to/from the request.

==== Google Cloud Secret Manager

Thanks to a contribution by https://github.com/viniciusccarvalho[Vinicius Carvalho], Micronaut GCP supports distributed configuration via Google Cloud Secret Manager.

=== Module Upgrades

TODO

=== Dependency Upgrades

TODO