@@ -19,7 +19,11 @@ record Example(@Min(20) int num, String name) {
 
 ==== Locale Resolution
 
-A new interface api:http.server.util.HttpLocaleResolver[] has been introduced to support resolving a locale from a given request in multiple ways. A `java.util.Locale` object can now be a parameter to controller and client methods to automatically bind the locale to/from the request.
+A new interface api:http.server.util.HttpLocaleResolver[] has been introduced to support resolving a locale from a given request in multiple ways. A `java.util.Locale` object can now be a parameter to controller and client methods to automatically bind the locale to/from the request. See <<localeResolution, the documentation>> for more information.
+
+==== Host Resolution
+
+It is now possible to validate a resolved host against a list regular expressions patterns. See <<hostResolution, the documentation>> for more information.
 
 ==== Google Cloud Secret Manager
 
